--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "oh-vue-icons": "^1.0.0-rc3",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.3.0",
     "vuetify": "^3.6.9"
   },
